# celily

./: .mdformat.toml  .rustfmt.toml  .yamlfmt.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: renovate.json5
.github/actions/build-distro-image/: action.yml
.github/workflows/: bash.yml  ci.yml  cleanup-pr-caches.yml  integration-ubuntu.yaml  man.yml  markdown.yml  python.yml  rust.yml  validate-github-workflows.yml  yaml.yml
celily/: Cargo.toml  build.rs
celily-lib/: Cargo.toml
celily-lib/src/: command.rs  distro.rs  lib.rs  limits.rs  mount.rs  util.rs
celily-lib/src/backend/: mock.rs  mod.rs
celily-lib/src/backend/lxd/: acl.rs  bridge.rs  instance.rs  mod.rs  network.rs
celily-lib/src/command/: async.rs  mod.rs  sync.rs
celily-lib/src/instance/: guard.rs  initialized.rs  mod.rs  prepared.rs  running.rs
celily-lib/src/network/: mitmproxy.rs  mod.rs  params.rs  rule.rs
celily-lib/src/secrets/: mod.rs  rbw.rs
celily/share/: worktree-init.sh
celily/src/: cli.rs  cli_def.rs  context.rs  main.rs  notifications.rs  validate.rs
celily/src/config/: backend.rs  limits.rs  merge_strategy.rs  mod.rs  network.rs  proxy.rs  validation.rs  worktree.rs
celily/src/util/: mod.rs  naming.rs  path.rs  shell.rs  username.rs
man/: celily-config.5.scd  celily.1.scd
scripts/: build-image.sh  setup-celily.sh  setup-lxd.sh  utils.sh
share/: celily-mitmproxy.py
systemd/: xdg-dbus-proxy-notifications.service
