[package]
name = "celily-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ajanon/celily"
description = "Shared library for celily — launch ephemeral, network-isolated containers"
keywords = ["lxd", "incus", "container", "isolation", "sandbox"]
readme = "README.md"
authors = ["Alexis Janon"]

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1"
bon = "3"
nix = { version = "0.31", features = ["user", "signal", "process"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "process", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
