[package]
name = "celily"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ajanon/celily"
description = "Launch ephemeral, network-isolated LXD/Incus containers for running untrusted code safely"
keywords = ["lxd", "incus", "container", "isolation", "sandbox", "security"]
readme = "README.md"
authors = ["Alexis Janon"]

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
celily-lib = { path = "../celily-lib" }
nix = { version = "0.31", features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
celily-lib = { path = "../celily-lib" }
